replace AppController and AppService with CreateAccountController and PrismaService

--- a/biome.json
+++ b/biome.json
@@ -15,6 +15,9 @@
       "quoteStyle": "single",
       "semicolons": "asNeeded",
       "trailingCommas": "es5"
+    },
+    "parser": {
+      "unsafeParameterDecoratorsEnabled": true
     }
   },
   "linter": {
@@ -31,6 +34,9 @@
       "complexity": {
         "noBannedTypes": "off",
         "noStaticOnlyClass": "off"
+      },
+      "style": {
+        "useImportType": "off"
       }
     }
   },
