--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@prisma/client": "^6.5.0",
     "bcryptjs": "^3.0.2",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.24.2",
+    "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
