add dotenv dependency and setup for e2e tests; configure unique database schema for testing

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
     "@vitest/coverage-v8": "^3.0.9",
+    "dotenv": "^16.4.7",
     "globals": "^16.0.0",
     "prisma": "^6.5.0",
     "source-map-support": "^0.5.21",
