--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
+    "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^3.0.9",
     "dotenv": "^16.4.7",
     "globals": "^16.0.0",
     "prisma": "^6.5.0",
     "source-map-support": "^0.5.21",
+    "supertest": "^7.1.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
